# gazelle_rust

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE  bootstrap_from_cargo.py  ci.sh  deps1.bzl  deps2.bzl  deps_versions.bzl  flake.nix  go.mod  go.sum  go_deps.bzl  rust_deps.bzl
.github/workflows/: ci.yaml
builtin_cfg_mapping/: BUILD.bazel  generate_builtin_cfg_mapping.bzl
example/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE  lib.rs  macro_lib.rs  main.rs  standalone_test.rs
example/src/: BUILD.bazel
examples/blzmod/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel
examples/blzmod/src/: lib.rs  main.rs
examples/workspace/: BUILD.bazel  README.md
examples/workspace/src/: BUILD.bazel  helper.rs
gazelle_rust_parser/: BUILD.bazel  Cargo.toml  README.md
gazelle_rust_parser/src/: BUILD.bazel  lib.rs
gazelle_rust_parser/test_data/: alternative_test_attributes.rs  macros.rs  provides.rs  simple.rs  test_only.rs
gazelle_rust_parser/tests/: BUILD.bazel  parse_test.rs
generation_tests/: BUILD.bazel  generation_tests.bzl
generation_tests/all_kinds/: BUILD.in  BUILD.out  README.md  binary.rs  dummy_proc_macro.rs  lib2.rs  test.rs
generation_tests/cargo/: README.md
generation_tests/cargo/aliases/: Cargo.toml  README.md
generation_tests/cargo/aliases/aliased_dep/: BUILD.out  Cargo.toml
generation_tests/cargo/all_kinds/: BUILD.out  Cargo.toml  README.md
generation_tests/cargo/all_kinds/benches/multi_file_bench/: main.rs
generation_tests/cargo/all_kinds/examples/multi_file_example/: main.rs
generation_tests/cargo/all_kinds/tests/multi_file_test/: main.rs
generation_tests/cargo/basic/: BUILD.out  README.md
generation_tests/cargo/build_script/: BUILD.out  Cargo.toml  build.rs
generation_tests/cargo/build_script_no_lib/: BUILD.out  Cargo.toml
generation_tests/cargo/compile_data/: BUILD.out  Cargo.toml  README.md
generation_tests/cargo/crate_tests/: BUILD.out  README.md
generation_tests/cargo/default_features_disabled/: BUILD.in  BUILD.out
generation_tests/cargo/default_features_enabled/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cargo/dependencies/: BUILD.out  Cargo.toml  README.md
generation_tests/cargo/extract_cargo_lints/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cargo/features/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cargo/mixed_modes/: Cargo.toml  README.md
generation_tests/cargo/multi_package_workspace/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cargo/multi_package_workspace_with_cargo_lock/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cargo/nested_modules/: BUILD.out  Cargo.toml  README.md
generation_tests/cargo/rtype/: BUILD.out  Cargo.toml  README.md
generation_tests/cargo/srcs_glob/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cargo/update_rule/: BUILD.in  BUILD.out  Cargo.toml  README.md
generation_tests/cfg/: BUILD.out  README.md  lib1.rs  lib2.rs
generation_tests/crate_tests/: BUILD.out  README.md  lib.rs
generation_tests/crate_universe/: BUILD.bazel  README.md  repin.sh
generation_tests/crate_universe/standard_bazel_lock/: BUILD.out  README.md  WORKSPACE  lib.rs
generation_tests/crate_universe/standard_cargo_lock/: BUILD.in  BUILD.out  README.md  WORKSPACE
generation_tests/crate_universe/standard_hyphenated_crate_names/: BUILD.out  README.md  WORKSPACE  lib.rs
generation_tests/crate_universe/standard_unused_crates/: BUILD.out  README.md  WORKSPACE  expectedStderr.txt
generation_tests/default_kind_inference/: README.md
generation_tests/default_kind_inference/src/: BUILD.out  some_proc_macro.rs  some_test.rs
generation_tests/default_kind_inference/tests/: BUILD.out  foobar.rs
generation_tests/deleted_file/: BUILD.in  README.md
generation_tests/duplicate_crate_names/: BUILD.out  expectedStderr.txt  lib3.rs
generation_tests/existing_rule/: BUILD.in  BUILD.out  README.md
generation_tests/features/: BUILD.in  BUILD.out  README.md  lib.rs
generation_tests/ignore/: BUILD.out  README.md  lib.rs
generation_tests/ignore_import/: BUILD.in  README.md  expectedStderr.txt  lib.rs
generation_tests/ignore_import/subpkg/: BUILD.in  lib.rs
generation_tests/keep_comments/: BUILD.in  README.md  lib2.rs
generation_tests/map_kind/: BUILD.in  BUILD.out  README.md  existing_lib.rs  existing_test.rs  new_bin.rs  new_test.rs
generation_tests/missing_deps/: BUILD.out  README.md  expectedStderr.txt  lib.rs
generation_tests/module_discovery/: BUILD.out  README.md  lib.rs
generation_tests/parse_error/: BUILD.out  README.md  a.rs  b.rs  expectedStderr.txt
generation_tests/proc_macro/: BUILD.out  README.md  another_proc_macro.rs  lib.rs  some_proc_macro.rs
generation_tests/prost/: BUILD.in  BUILD.out  README.md  lib.rs
generation_tests/simple/: BUILD.out  README.md  main.rs
generation_tests/source_grouping/: BUILD.out  README.md
generation_tests/subdir_module/: BUILD.out  README.md  lib.rs
generation_tests/subdir_module/subdir/: mod.rs
generation_tests/subdir_module_adjacent/: BUILD.out  README.md  lib.rs  parent.rs
generation_tests/subdir_module_adjacent/parent/: BUILD.out  child.rs  standalone_test.rs  util.rs
macro/: BUILD.bazel  Cargo.toml  README.md
macro/src/: BUILD.bazel  lib.rs
macro/tests/: BUILD.bazel  ignore_test.rs
patches/: bazel-gazelle.patch  bazel-gazelle__generation_test_kwargs.patch  bazel-gazelle_p1.patch  rules_rust.patch  rules_rust_p1.patch
proto/: BUILD.bazel  messages.proto
rust_language/: BUILD.bazel  builtins.go  generate.go  lang.go  lockfile_crates.go  parser.go  resolve.go  utils.go  workspace_manifest.go
rust_parser/: BUILD.bazel  Cargo.toml  cfg.rs  lib.rs  lockfile_crates.rs  main.rs  parser.rs
rust_parser/src/: lib.rs  main.rs
rust_parser/test_data/: alternative_test_attributes.rs  async_tests.rs  cfg.rs  early_mod.rs  features.rs  simple.rs
rust_parser/tests/: BUILD.bazel  parse_test.rs
util/: BUILD.bazel  gofmt.bzl  run_gofmt.sh
(+52 files in other folders)
