load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:exclude build

gazelle_binary(
    name = "gazelle_bin",
    languages = ["//rust_language"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

# gazelle:prefix github.com/calsign/gazelle_rust
gazelle(name = "gazelle_bootstrap")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# TODO: support crate_universe
# gazelle:resolve rust syn @crates//:syn
# gazelle:resolve rust clap @crates//:clap
# gazelle:resolve rust lazy_static @crates//:lazy_static

# NOTE: need to use the version of protobuf from rules_rust so that it matches
# gazelle:resolve rust protobuf @rules_rust//proto/raze:protobuf
