load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:rust_lockfile cargo.bazel.lock
# gazelle:rust_crates_prefix @crates//:

# gazelle:exclude build

gazelle_binary(
    name = "gazelle_bin",
    languages = ["//rust_language"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

# gazelle:prefix github.com/calsign/gazelle_rust
gazelle(name = "gazelle_bootstrap")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# NOTE: need to use the version of protobuf from rules_rust so that it matches
# gazelle:resolve rust protobuf @rules_rust//proto/raze:protobuf

# NOTE: use cargo_bazel to parse the lockfile
# gazelle:resolve rust cargo_bazel @rules_rust//crate_universe:cargo_bazel

# NOTE: need to use the version of serde_json from crate_universe so that it matches
# gazelle:resolve rust serde_json @rules_rust//crate_universe/3rdparty/crates:serde_json
