""" Gazelle module for Rust """

module(
    name = "gazelle_rust",
    version = "0.1.0",
    repo_name = "gazelle_rust",
)

### Go/Gazelle
bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "gazelle", version = "0.37.0")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_google_protobuf")

### Rust
bazel_dep(name = "rules_rust", version = "0.46.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

# Rust dependencies
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.spec(
    package = "cargo-lock",
    version = "8.0.2",
)
crate.spec(
    package = "cargo_toml",
    version = "0.16",
)
crate.spec(
    features = [
        "full",
        "visit",
        "extra-traits",
    ],
    package = "syn",
    version = "2",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4",
)
crate.spec(
    package = "lazy_static",
    version = "1.4",
)
crate.from_specs()
use_repo(crate, "crates")
