load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/protobuf:proto.bzl", "rust_proto_library")

proto_library(
    name = "messages_proto",
    srcs = ["messages.proto"],
    visibility = ["//visibility:public"],
)

rust_proto_library(
    name = "messages_rust_proto",
    visibility = ["//visibility:public"],
    deps = [":messages_proto"],
)

go_proto_library(
    name = "messages_go_proto",
    importpath = "github.com/calsign/gazelle_rust/proto",
    proto = ":messages_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "messages_go",
    embed = [":messages_go_proto"],
    importpath = "github.com/calsign/gazelle_rust/proto",
    visibility = ["//visibility:public"],
)
