load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

# gazelle:exclude test_data

rust_library(
    name = "parser",
    srcs = ["parser.rs"],
    visibility = [":__subpackages__"],
    deps = [
        "//3rdparty/crates:syn",
        "//proto:messages_rust_proto",
    ],
)

rust_library(
    name = "lockfile_crates",
    srcs = ["lockfile_crates.rs"],
    visibility = [":__subpackages__"],
    deps = [
        "//3rdparty/crates:cargo-lock",
        "//proto:messages_rust_proto",
        "@rules_rust//crate_universe:cargo_bazel",
        "@rules_rust//crate_universe/3rdparty/crates:serde_json",
    ],
)

rust_binary(
    name = "rust_parser",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":lockfile_crates",
        ":parser",
        "//3rdparty/crates:clap",
        "//proto:messages_rust_proto",
        "@rules_rust//proto/raze:protobuf",
    ],
)

filegroup(
    name = "test_data",
    srcs = glob(["test_data/*.rs"]),
    visibility = [":__subpackages__"],
)
