load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "lockfile_crates",
    srcs = ["lockfile_crates.rs"],
    visibility = [":__subpackages__"],
    deps = [
        "//proto:messages_rust_proto",
        "@crates//:cargo-lock",
        "@rules_rust//crate_universe:cargo_bazel",
    ],
)

rust_binary(
    name = "rust_parser",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":lockfile_crates",
        "//gazelle_rust_parser/src:gazelle_rust_parser",
        "//proto:messages_rust_proto",
        "@crates//:cargo_toml",
        "@crates//:clap",
        "@rules_rust_prost//private/3rdparty/crates:prost",
    ],
)
