""" Gazelle module for Rust """

module(
    name = "rust_gazelle_example",
    version = "0.0.0",
)

### Rust
bazel_dep(name = "rules_rust", version = "0.46.0")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

# Rust dependencies
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "ex_crates",  # Should be default, but we need to specify it here to avoid duplicate crate names
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "ex_crates")

### Gazelle
bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "gazelle_rust", version = "0.1.0")
local_path_override(
    module_name = "gazelle_rust",
    path = "../..",
)
