load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "parse_test",
    srcs = ["parse_test.rs"],
    crate_features = ["bazel"],
    data = ["//gazelle_rust_parser:test_data"],
    deps = [
        "//gazelle_rust_parser/src:gazelle_rust_parser",
        "@crates//:lazy_static",
        "@rules_rust//tools/runfiles",
    ],
)
