load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "parse_test",
    srcs = ["parse_test.rs"],
    crate_features = ["bazel"],
    data = ["//rust_parser:test_data"],
    deps = [
        "//rust_parser:parser",
        "@crates//:lazy_static",
        "@rules_rust//tools/runfiles",
    ],
)
