load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# Sample library. As new rust source files are added, rust_library targets will be created for them
# automatically. You can regroup source files into different targets, or change the rule to
# rust_binary or rust_test, and gazelle_rust will respect those changes.
rust_library(
    name = "lib",
    srcs = [
        "helper.rs",
        "lib.rs",
    ],
)

# Sample binary. gazelle_rust automatically adds the library dependency on lib and the
# crate_universe dependency on clap.
rust_binary(
    name = "main",
    srcs = ["main.rs"],
    deps = [
        ":lib",
        "@crates//:clap",
    ],
)

# Test targets are automatically created for targets that define inline tests. Test-only
# dependencies are correctly added to the test target.
rust_test(
    name = "lib_test",
    crate = ":lib",
)

# Standalone test targets work too.
rust_test(
    name = "standalone_test",
    srcs = ["standalone_test.rs"],
)
